basic plane scene, addition of assets

--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -17,20 +17,19 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/background/rocks_2.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/background/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/plane/planes_sheet.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://assets/", "res://assets/plane/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn")
-current_scene="res://Scenes/Game/Game.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn")
+current_scene="res://Scenes/Plane/plane.tscn"
+center_split_offset=-478
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
