--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/plane/planes_sheet.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://assets/", "res://assets/plane/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Plane/Plane.cs")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Plane/", "res://assets/", "res://assets/plane/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,15 +27,16 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn")
 current_scene="res://Scenes/Plane/plane.tscn"
-center_split_offset=-478
+center_split_offset=-374
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
 open_scripts=[]
 selected_script=""
-open_help=[]
+open_help=["AnimationPlayer", "CharacterBody2D"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
