--- a/GemCatcher/.godot/editor/editor_layout.cfg
+++ b/GemCatcher/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Game/Game.cs")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Gem/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Game/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,7 +25,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Paddle/Paddle.tscn", "res://Scenes/Gem/Gem.tscn")
+open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Gem/Gem.tscn")
 current_scene="res://Scenes/Game/Game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
