--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-488
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -25,12 +25,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn", "res://Scenes/Barrier/barrier.tscn", "res://Scenes/Pipe/pipe.tscn", "res://Scenes/Pipe/laser.tscn", "res://Scenes/Pipes/pipes.tscn")
-current_scene="res://Scenes/Game/Game.tscn"
+open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn", "res://Scenes/Barrier/barrier.tscn", "res://Scenes/Pipes/pipes.tscn")
+current_scene="res://Scenes/Pipes/pipes.tscn"
 center_split_offset=-374
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
