--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -17,20 +17,20 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Plane/", "res://Scenes/Pipe/", "res://assets/", "res://assets/plane/", "res://assets/pipes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/audio/bgm_menu.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Pipes/", "res://Scenes/Pipe/", "res://assets/", "res://assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn", "res://Scenes/Barrier/barrier.tscn", "res://Scenes/Pipes/pipes.tscn")
-current_scene="res://Scenes/Pipes/pipes.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/main.tscn", "res://Scenes/Pipe/laser.tscn")
+current_scene="res://Scenes/Main/main.tscn"
 center_split_offset=-374
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
