--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Globals/SignalManager.cs")
+dock_filesystem_selected_paths=PackedStringArray("res://Globals/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Plane/", "res://Scenes/Game/", "res://Globals/", "res://assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,8 +25,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/main.tscn", "res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn")
-current_scene="res://Scenes/Plane/plane.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/main.tscn", "res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn", "res://Scenes/Hud/hud.tscn")
+current_scene="res://Scenes/Game/Game.tscn"
 center_split_offset=-374
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
