--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Main/main.tscn", "res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn", "res://Scenes/Hud/hud.tscn")
-current_scene="res://Scenes/Game/Game.tscn"
+current_scene="res://Scenes/Hud/hud.tscn"
 center_split_offset=-374
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
