--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -14,23 +14,23 @@ dock_hsplit_3=-488
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=0
+dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Globals/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Plane/", "res://Scenes/Game/", "res://Globals/", "res://assets/audio/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Pipe/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/main.tscn", "res://Scenes/Game/Game.tscn", "res://Scenes/Plane/plane.tscn", "res://Scenes/Hud/hud.tscn")
-current_scene="res://Scenes/Hud/hud.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/main.tscn")
+current_scene="res://Scenes/Main/main.tscn"
 center_split_offset=-374
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
