--- a/Tappy/.godot/editor/editor_layout.cfg
+++ b/Tappy/.godot/editor/editor_layout.cfg
@@ -9,34 +9,34 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=408
 dock_hsplit_3=-488
 dock_hsplit_4=0
-dock_filesystem_h_split_offset=240
+dock_filesystem_h_split_offset=333
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Pipe/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/audio/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main/main.tscn")
-current_scene="res://Scenes/Main/main.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main/main.tscn", "res://Scenes/Hud/gameOver.tscn", "res://Scenes/Game/Game.tscn")
+current_scene="res://Scenes/Hud/gameOver.tscn"
 center_split_offset=-374
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=[]
 selected_script=""
-open_help=["AnimationPlayer", "CanvasItem", "CharacterBody2D"]
+open_help=["AnimationPlayer", "CanvasItem", "CharacterBody2D", "Timer"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
